x3-app-store/k8s/production/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: x3-app-store-backend
  namespace: x3-app-store
  labels:
    app: x3-app-store-backend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: x3-app-store-backend
---
apiVersion: v1
kind: Service
metadata:
  name: x3-app-store-frontend
  namespace: x3-app-store
  labels:
    app: x3-app-store-frontend
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: x3-app-store-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: x3-app-store-scraper
  namespace: x3-app-store
  labels:
    app: x3-app-store-scraper
spec:
  type: ClusterIP
  ports:
  - port: 3002
    targetPort: 3002
    protocol: TCP
    name: http
  selector:
    app: x3-app-store-scraper
---
apiVersion: v1
kind: Service
metadata:
  name: x3-app-store-treasury
  namespace: x3-app-store
  labels:
    app: x3-app-store-treasury
spec:
  type: ClusterIP
  ports:
  - port: 3003
    targetPort: 3003
    protocol: TCP
    name: http
  selector:
    app: x3-app-store-treasury
---
apiVersion: v1
kind: Service
metadata:
  name: x3-app-store-manager
  namespace: x3-app-store
  labels:
    app: x3-app-store-manager
spec:
  type: ClusterIP
  ports:
  - port: 3004
    targetPort: 3004
    protocol: TCP
    name: http
  selector:
    app: x3-app-store-manager
